fix navbar title align center

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -324,7 +324,9 @@ footer
       height: 0
       margin-left: 0.5rem
     a
+      margin: 0
       #title
+        margin: 0
         font-weight: 500;
         font-size: 2rem;
     form
